--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
