the fucking button, 90 minutes of my life

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="content">
       <header>
         <img src="images/brand.png" alt="Instagram">
-        <button><img src="images/home.png" alt="Home">Log In</button>
+        <button><img src="images/home.png" alt="Home"><strong>Log In</strong></button>
       </header>
       <div id="text">
         <h1>Capture and Share<br>
