small tweaks to typography

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <li>Jobs</li>
       <li>Privacy</li>
       <li>Terms</li>
-      <li>&copy; 2014 Instagram</li>
+      <li><span style="color: #CCCCCC">&copy; 2014 Instagram</span></li>
     </ul>
   </footer>
 </body>
